# bridgewater

./: .gitignore  Cargo.toml  build.rs  generated_header.rs
shaders/: compute.cpp  compute.metal  render.metal  shader_types.h
src/: main.rs  particle.rs  render.rs  shader_types.rs
