[package]
name = "bridgewater"
version = "0.1.0"
edition = "2024"

[dependencies]
game-loop = { version = "1.3.0", features = ["winit"] }
glam = "0.30.1"
metal = "0.32.0"
winit = "0.30.9"
core-graphics-types = "0.2"
cocoa = "0.25"
core-graphics = "0.24"
imgui = "0.12.0"
imgui-winit-support = "0.13.0"
rand = "0.9.0"


[build-dependencies]
bindgen = { path = "../rust-bindgen/bindgen", optional = true }

[features]
bindgen = ["dep:bindgen"]

